skeplib/tests/fixtures/resolver/invalid/cycle_three/b.sk
import c;

fn fb() -> Int {
  return 1;
}
